add intel-device-plugins-gpu chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:AfsdV6TQ6M9xSxkrkLvCkUyM3zk57X/f4Pd+i88oLWJMq7YzrqcAqYkoAhE8sMCDLqw6EA9rknEdRwqYNGkSSc4=,iv:rf+/+MrTKwB6YR9NtXY44NR8mVDUoTU3XY3XEXuFEIU=,tag:gNPaAEpZr8Otrjd0/xwAPA==,type:comment]
-#ENC[AES256_GCM,data:xfci4wd/ehqtvp5xpxNb4nSX1bozZwfJ/hwIYr0NL8Ye0ruvuKflo20wtKo=,iv:pyeSb0Trwgu1ktGyXbbO4cYGyyj9OgEh8GZF1OxbTxg=,tag:rwc9pKRetAHfGg/cs15stg==,type:comment]
-VIP: ENC[AES256_GCM,data:yYHxW4h9fUISDkHRgA==,iv:N7o8lidTK3CqZrIpl0QLysvpiztBRmN9H4ur0Edhd34=,tag:I+tHzu7zC3wMJoIVIgV7ag==,type:str]
-#ENC[AES256_GCM,data:Mimd41wKAU3oGsdlTjHdJFPaA2dQzj2wJfJs,iv:QNtZD4vsW6qKRaohHy2EDF8s2rFdfSwK2JTI5MTBJoY=,tag:SddZR2Yet2tN26t7uogwcg==,type:comment]
-#ENC[AES256_GCM,data:IX3BrgNlj562sxJi0/vgR2wSNceQVmH+Pgf3+/gLOIKETSNTHE7T6gxpqRYh/7PJFXKGPdaW4E8PkHHfLGrceFr545pQx1j7EosQymC+9VTNDONuDoH2G6c=,iv:yG8h7HBNfnThON4pI7ueVbi4/QphG4nbt35qimvfqtw=,tag:JIRFvIqCK9TVN798uLUXhQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:Yk3htKLHGBFvabldAgU=,iv:e7TnuJuS/8idaZCuph9PNWtdPLASMFNSM5DRsDFf2qc=,tag:XOrqlwMMc0l6/43Iav1T+A==,type:str]
-#ENC[AES256_GCM,data:7/EAPTOQn0xwylsl6yG/qF/Lqwwc4w6BqrTJ408acb01GQ==,iv:gDWCvscYNtDs0I3xhp37gohSeN4t5/m+BUwaby8eZZ0=,tag:ydJl3BayOh0TUs8aq237sQ==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:QVXvLGjJ4VW4GGDbbw==,iv:xq1Zdfc+vRXqlzcK9T/Gf4KlwMYHQD/QjSes2NgnxMU=,tag:FnfZ7CvcyHnMjIb5P/VvqA==,type:str]
-#ENC[AES256_GCM,data:rc7jeEzuAFWB0xf5ZUF3L+hHyFakh6WTja3vBKr2oPeLG2zKjrulvSN+jItXssA=,iv:xOXar+ZkmUHYs+W+9dc+TgEwHdpwEGTFeGeGZZTUxIQ=,tag:mvUYfrxbRYSgJGD1HwWMZA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:lKb0R+djN02MBKJ0NV/pyK0tfQkbCXOrSOyKlmMMjg==,iv:6Gh04NLx9ggc+1fE4meD1cLMRYPStPY5CN/W726xkuE=,tag:n02KFdUzTGkEfXuCZ/Djug==,type:str]
-#ENC[AES256_GCM,data:gYiaDW0Qt0ByJ0UAepLxqd+cV62uuM2rzAbgxBvvuyY6sgjPfvTe4BxNYoOsf+XFOHqoGAeueg6Ywk85SiQfEt2ZZJFDu3cQ6bIWOysTfCMeKA==,iv:M/bFZ4pSdfbJSq8S1FDX6GtVbhGkjc/Yc8s7lYKetDw=,tag:B4lVNnCYrz9S7Hjrqw22uQ==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:JK/Cfia8r8m9+52u2DZ6,iv:Gs7prryDQe3rzYlx6ATk4pkuwR+OlzA7CGJzoi4oL+A=,tag:m5OJjCpWATMGtxNDNwQ61A==,type:str]
-#ENC[AES256_GCM,data:t4ZtOrkWG3NTpB26LIXJkDstu0rsOCQmIaGWPxL+sajC,iv:Usk5sxNIAhIw1gq2QiUylXjJTzyYXvIX0oKs4Xj7QtI=,tag:acPhk/eayxIkW+WeydSb/Q==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:RTbXMtmEXuDm8u8pKPgR,iv:jLdpLQfnjr19LiKBvjnENS2NMsLFkG+B2ECNWzL8yIc=,tag:WX4kL93GH8B75AvzTvYJRQ==,type:str]
-#ENC[AES256_GCM,data:TtUy2rgr+fW0IYrZ2pKo9iXxXfjMgvq8r9VJRo54HDxgiv57K4mhcruB9NiINPjHz6xscnsGMa+acJaY9Ix5b8ox1ff1P3KQkZsNLVDb00A=,iv:SFzZpKlIlfaZk3QYoV8ruUjtESyWr2o8nb9cyZewlso=,tag:yUUfaIgGu5hTZrea9HNGOQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:jSSxuEl8AOz20gzcyjoc,iv:U7bC2rvowafRXMPML124RxogpBdFCVQgu3/Dcf6u2gs=,tag:WBq0b8nUzQroqEUWX0uSDA==,type:str]
-#ENC[AES256_GCM,data:uUhaRLX6jgTxkhVzb6pFWO4MRryBgOqRhxsd1KbD0/IdSP/c+1U07hdx2gorr8NXLJaFqjdB8tWQMN3ZrK1oVWAN3/jsk6d4XJ5T+4Z3fp8bRs/Ibt+a,iv:z81NGEUHR9hKtaRfHCVNrEEfY+8GUWUv77LZfzmqrjs=,tag:auLj5bxGwkiqetk5FoYTtw==,type:comment]
-#ENC[AES256_GCM,data:J7Z7AYb07fJfXHRa3aAmMOCx2XO5IHFwNSRcVsEoheGTAL3rg3Yf1x5FOR64naCHDtHD4YToh9rA8619pI5wLJiPfa29nlAenZPjhkzGTXcTI8hIcQi9wAKeMkKkH3eD7whFLUJb8+NVkQXCHGbL2XUCLpvAU4XTgjo99A==,iv:G2qrWEgNWDIG+crXGMymuKR8b59OzACQLIIPOsX3sis=,tag:ci2fjmTufJXhSpy2T8IYBA==,type:comment]
-#ENC[AES256_GCM,data:49IbmQeRKw5b31eyszcZuCX5D25gmPnehT4BrxTHqSCwYw3l/J2/3BgiO17CCp5C0oxI2D8f7MUU0aPxfyR+l1YYh5VN7BEaOxZLfwPAxNM=,iv:JFv7YLkevgnZFhNEGgOAFMF5hPxYA1zY+8WqAAOxGs4=,tag:tW/eVRIGBjlnGvhQqRQC8g==,type:comment]
-#ENC[AES256_GCM,data:b1ICDjMzhEfqxrAnVvf8O/ilicGwllCDaHIywRgQLK5Y48d6twCip6HE+fie/7/aDKQdqKYu,iv:xEk82W5PkoqyloXCv7FvqjoKzSErDdlGbN5S++3vRVs=,tag:+PdcyQurhvZsby/Aq/t9Eg==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:iITumf1TvRri7Z+f,iv:8yyLvi7wq5rjCH8N2BqndBCFDxZh+LD5CcmD0dtIyuY=,tag:E2Wh9AqPkvE8gUOJzaaZcA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:IjTTQ7TH9mKOou442go9LgQ=,iv:pJg4qnOcMkcjcExz/oGl7kSYs7hDiFtTqfsaP3iGVeg=,tag:b7gk0F7OwcrhL05QhRNgyA==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:VOZvC/IoEaZaivtN79NQCj7xosLfpW/4VKJyAuPpJUc=,iv:p3ZGe7psRAD5P9yRc1DxxmvitugSEN0rwitzviXN8zk=,tag:srgJstwiHkKw+ipUZZ8NcA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:V3SoGJgxZW9WJBsGZC5BNCnM0YC9N/PVX1npR4BuFbwcd8lkWyB8Lg==,iv:+oTpz8jKFRe3jwnHzOBJ4PrLV2oVPjDHNNOATLnffZ0=,tag:2cE2ltDfwOLgi1GnZXbY6A==,type:str]
-#ENC[AES256_GCM,data:e78Bff9/svHs5PP8MA7rUKEN8n3nujW0Pz2cXqT9LRWpppvzI1j9NWITyoHF91KW4x1I2RLyRS5oW+tQIQ6O4g==,iv:B8yU6f6KN3umaGnwRkOwAtHOdaviYK0qJmhsgTWmIwA=,tag:PIkh2IFA44lqobjE67xS/Q==,type:comment]
-#ENC[AES256_GCM,data:yrL5zqGPYSoYJVoKNwANclFRS+Nfsqhn7mREtmYxCEich5Lf6/SKVFqm73FQ1ODOcAD6vfHuDV0=,iv:JyYh/IXarMjTnGsVDbp1ZvGclYKiR2VLo06jtxp+CWE=,tag:aGMbCp824KB28bu/1FkXQg==,type:comment]
-#ENC[AES256_GCM,data:NyHkNMY8B32IHCvhrn2gMHOhNJzaCO1+sA==,iv:s0uAHLa86YHWpVeauPSdpZrqi1t2BPkGnPjrFy+1nuo=,tag:LqvcYTeOSRogHXOBgQbbOg==,type:comment]
-#ENC[AES256_GCM,data:0uQHlxCiAKeYrPm72HR85SUUkCvH079Rb9UT11DQDnWQUPYWlxvBTZrRzx8mPDh24df7W2giBR0vwQPpC4QjI5EnBBw4t6ZJkwJiBTM=,iv:S9ltarjTvwGB1lcQcgadem2dhKRPX10+v3SQirOeLeE=,tag:BXiSgQAUq4JBgbrJCv/7/w==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:bwMEUYrtoK6WHlLqTjRW4S1BgcqWyouGSwkqula/71r7VlMw8wytYytxrfOP73Pp,iv:4P8dre41vO+gqNCa1toTHA8kfSfDj4MMDY7DOcGtT+o=,tag:oSCMPE7wp6OjDGv5zktgKA==,type:str]
-#ENC[AES256_GCM,data:2re1HFeFMvBJFhPOghHQ1eIPBj59yWFxzxkLXOYS6yS5whfaBGdsQLXFiFI8UkCoZS4lGQ1ncBRcUApbpwHTWVGEqB8g3vY=,iv:borW81VL/6eWMnHVMVuzNZ095vh9FeqJoCIkOUYUCBY=,tag:SDEi4b5cmUoRExQli8d+ww==,type:comment]
-#ENC[AES256_GCM,data:3LPWrnmN+Do0r1MJoF8jdlho6X4EaD/Mow6giiiGg0cvxZOVUmTg81QDlUTTY/86hWnvGcU2,iv:+SYqvczPusMzg0BrYjT9TfuDfisvtdsG/xk8pNBshIo=,tag:E1SaduZKJXY0DSAbebslnA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:gCwntGM18w==,iv:To9xMcZah7LJrfVDqrzEKmaJvYcZdlTH4edlaVUm0W4=,tag:xkj3A8v+xKTVgv0gv+8/NQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:t3nPV2JyXkpyruxc/N0arLx7ZIs=,iv:lCi37TX3fIRJ0QvIfEvhSqkCZ36wOWsCJAnkPKQg+WM=,tag:IMz7F9z3cKk5IqI26ktC4w==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:S0Y+EsFN1qsbbUo=,iv:hWLXZO+WqbOYkIhTlkrhVg6qDi5ZwPQnZPvHLFUSrj0=,tag:K6ajPz/mB0HccKIgQ1mVnw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:C4kgOvkMlol239fX2fXz,iv:b+DdG1zZVrSIilugwUmhM8XiPxZn1cSk9gXjqB4sEos=,tag:+6prijPcF5hVJuiMCZOwYQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:CYB2qa0aIA1AX9u2KjGYslFP/i/8VBu7gg==,iv:JYdriOTrvgz+F/LLjSVvLx/x3iW3Jlgh3tDD6VnsWms=,tag:9UJ8G7piP8Gftsx4n0VVnw==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:p92dOQxlmLPkzafZG1CLp46LmC1Ouj2eVxQjGEHzwQ==,iv:aLePlMrJctY0QJMdvb3W0CiN2/U+jGgmVef8SoASLFQ=,tag:AqxaxKmgJYlC+Ao1YJWsSg==,type:str]
-#ENC[AES256_GCM,data:0TjLKQjXxdytsuFqUzcf0rop/GJaOSBYd9j4t7vIMJbdjgwVDd4=,iv:zNQIYtIuLjDFzoQXkIHmvbSAtt611acj7hNP1QMwpUM=,tag:hme+qg5Kj2DIazinsht27A==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:S8Hg0vVUHX/VgCatS/hy8e8SWKg=,iv:v5+rd5TgvUDU9RnMahpPu5CTydiI4ji1j1i5FvCIAGQ=,tag:K0vC4+Ot+AODR8JDNYa69A==,type:str]
-#ENC[AES256_GCM,data:KEHFBB+LS4UzXOiVaiE=,iv:ue4oAjlaK35FhLTY4GoOohusKkC0coqm3VO3RJysDoo=,tag:ZwsbGDGKJDMqbTG0mnAyBA==,type:comment]
-PODNET: ENC[AES256_GCM,data:NyH6WfLODiArZENLkg==,iv:Oc7XUnYwE0fiG9jdf6815MvRvLbwnwoBCEL4fDrwtyo=,tag:x85YaswFnyc+Iy2yQPdSpw==,type:str]
-SVCNET: ENC[AES256_GCM,data:Xeb2qKqhbwEKTQ9Zcg==,iv:DUM4DLe+bGpKpZfJCWkNNAk0rUyAevxtITWH8eeyRuY=,tag:6IPF0K3hy5/x2zNl2zYuPw==,type:str]
+#ENC[AES256_GCM,data:3bk1P4/TSPI5Sm5KzEkNLohpIfy5vPszu1Wup+Oj/m/7EF+Y5/9XORahck02BgAJa8nsiUgKpzPYWTAJXMIu5Bk=,iv:G43yYfxbogyXjvIrIKGDNoDMHh/Z5EF5gsWt61MGzsE=,tag:D2quVo0PGYHTihxcfsIgmQ==,type:comment]
+#ENC[AES256_GCM,data:LY1Ew6l+oGeUfyvZYCmgGSS6EmNmxQOnEyF70xDOS9T68wvnuMHTy4d3Cms=,iv:8pLxcbEHkpb7tGhqgG3OvCItYBH+XM0gaBRzBIDJLJM=,tag:FcLn9ug7jySoMsh84U+Q4Q==,type:comment]
+VIP: ENC[AES256_GCM,data:V2PaS/7XZnfdj1Grxw==,iv:Prdggxgn33q6r2uMReROIwap890lLpA1bJjBJ/aIKUI=,tag:3O5NP8qky2q2frnMTiA3SQ==,type:str]
+#ENC[AES256_GCM,data:xgnT1v82KbsZhtiMMqI1Bd1jQHcDim8hJLhe,iv:XwMJN4wchPR6rlLNVvAWVy1LA4JXrMNOMfhTHSPsOIY=,tag:lrDkaJDcCzj4s9UBIkvURA==,type:comment]
+#ENC[AES256_GCM,data:Fh/dCJrdD1jSUURXqhAgYO0UN1YxVmU4QSCFZsQ+KPnZ6w0vLCLQ6kx8pT+JD5JG/5vwoiez4MDa57TXAoqBF9Tvymu00CFOZ2f3YvckyhZZ9fmk84DiwBE=,iv:HPbGZ/UR3mBQS2pb40pDfCaZuNsiV2Ii98KV/weihSw=,tag:Rblrx6q5yqCBQBKco3X6AA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:wpRQyTXc4ju6en9ZyNE=,iv:VEqwEeLEMsO6vI5JsLyBNU3v9EU+W2vAJIv+eRmWQPE=,tag:Q+BJ6AE4cgh81lxG2Yoonw==,type:str]
+#ENC[AES256_GCM,data:WQs+G6GK3vnCgDA9UtkK2BFckGjE55TjL5t7TRhBZ9w23g==,iv:2270HS5DqgBop60ufa4Mq1dyS8QS9oy8d3UE2L4+c1E=,tag:AHiaKyV6Un88hdPkBzrDSQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:h4v2/SY+J6miJuJ5TA==,iv:BFc1CDpGaARmrVjs48GlQfmljlTZOJtaOTbZ7hBosKc=,tag:TRqNmBl9D0TduGel40RJQQ==,type:str]
+#ENC[AES256_GCM,data:k97RuUhB0ADw24/XzpvrCTUgHw096pQ0xmDS6SfNZHERCBeQnbAWqJKa++cWCkI=,iv:c/aEJpWcgRQN0/vLCEsaStSfP3YJ85jNwol34vMlnoc=,tag:YhNr+wzWJtR7mn35CEK+jA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:5xbAZQNCt2fG3eJvU5ymNh/7o3nfbBdVcWKMMZYYgA==,iv:pPa2Ix6mj1WTQ+3d6EfvC+PdTMSml8BPJD8mJWo9beE=,tag:IEAtFXSEm+r8ehJVHqPRCQ==,type:str]
+#ENC[AES256_GCM,data:XfAVPtaiN22alc1yThpmYNeXVWfQvFwm5Di6zSHZOg4Owjy48oyaN3Fnkg93OubW+J4bAgaHL/+84ddfsoU+8cCPK37jeI3Qv58UuRQ3IhW1Cw==,iv:g3HQZZ9x1vWCC+qsVHz412RDCBRXcX4H0d5jSfF7258=,tag:4dFKpWS0FJEKq9N/HmA51A==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:r+6R7RKAtPs6ekYIKdKx,iv:qhDh/WQOZBLkPgkhcCKh2NAXS6YagACu5pdXFQMduEY=,tag:MzqmxLGdNKBprTXCdPJOEQ==,type:str]
+#ENC[AES256_GCM,data:oYSra8SWUoqsejup013UEIsGWWlV8gb+Xm2xiKF2cEch,iv:KMLrhtHDSFPDlqlq91btEE5c3bKc45iXLUsr6MPY0Es=,tag:w8zgIelqAtnNIK8bzAp+EA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:8j+CBE0dGD7Kis/GqEHw,iv:jCQ/5pNI9Ss9wOvEMkqw6kfzaH1wBmaOYD6l8Q68hJY=,tag:uI72mB2Nt0rHhvtmZ+J33A==,type:str]
+#ENC[AES256_GCM,data:SRzn61dQ/hKWnhiF4Z28DtyH4dC/Lm/GjPQbyn1q2bjAaUvLqjLsBOmlQMxJn2aRinC1aD1EOvftZEiyrUfKmo6Z1TlIresLeiXY6O1R2BU=,iv:Jg5VW+dwxXcjhf4eEkqNUPSi9w2GhlGkCllRF6+hra0=,tag:NsN0v/yi1XbWFxInd4h1rg==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:InjuzWe0ypmgQ3u2tjNt,iv:2c1fzjZBH2WKpNeOvtO0pE92OcIbPTOltMQGkoCBQAg=,tag:YcgRji30AcvnX6pTCjNDcg==,type:str]
+#ENC[AES256_GCM,data:VxnIG1pTrxyE+UV07MqKpiefXk7rcviZkila1wGBeRtQ6dgSMDeTlmSlJ6nYXv3xes71kwOfeEi6W+0Qhug07/fG+PBUcHccZAuU15l2adUUyH0wDvCD,iv:aoRW++tkPfxUK24eDYIj+sOP0Ewxj0uIh7nX+I1ROxI=,tag:uPH4apKZYzc7T31z2nAYdQ==,type:comment]
+#ENC[AES256_GCM,data:ZMYEuAN4EC2Gpu+/ONvRFSnltiYEVd/SIGsBsG8FFvKZpjnWXAQCCzH/rmw5R33d2G0lruZE42+bbNiWF8DYnMTDNDDPqdOtgBSYSttvXVTfw6+hLmjqjQpAlRkwEbUvqPZCldNbdoMY8YKD94LOVKpataVIuu5FJ08fUw==,iv:HsFKVluzH7fDqfjRPAMjUUhAJXqpE4ajvcOythKqneQ=,tag:Auqt+oIx8SqjdDFJbIWPRA==,type:comment]
+#ENC[AES256_GCM,data:aKXxWT29K+NzJe5dDLCldyQd/2IDvzz2rD/62NxR9DjvWxOxuNhFEnKrz1nB0UbkIOmMwG2XQIzvbs5QdF6HbrBlPY/J4ZE44uDO4w+rpnI=,iv:B7INPvEeGWmOlWgHNFeYnsq8cUuOch2Xb5t5waZk/eg=,tag:BtH5IttHAjg8wfz0SJuNXA==,type:comment]
+#ENC[AES256_GCM,data:pfxa6F51a0ufxFrXU1uyWpmIHBeW0m8C89HgHB115p+L7qpcKtjTKvg1HekO6Ub2pCRshgpc,iv:I9AE8vMMNelfdRKyfdJl1ID2zFOxeymneFD4ej6IONs=,tag:9PkGhf7B6MaRKJi1xNlK/Q==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:vsieUhtSGT83g6of,iv:SGrLUtWWq2DjYNOajFJZ0CDTKTlFfIMkojN7L1psd4s=,tag:AOL95dM8K1VweZcMk8rIJg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:yNQUd/eY+hp5GlMrhLwgALY=,iv:ibGARNNBFDKzXOVWv0PnIDNcjye93zf30jW76/TUuRc=,tag:8bFe/8cpXyYCiA/5/CYsug==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:3yuzZJoY3tzcvb6ZvxENlF/zd8f2X3cJOVmDcOXnMKI=,iv:MK3kOVvDRbY4+1NK5Uo9NAW7/ZJeaAKxT47j5K6WsYM=,tag:vlE+gI1uiTC7t4JzZ1qlhQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:N0u4xJME5uwcOZeqnu2XPeeG/Emp8n4BX7dDIZ0tgfYZXA0irxA0NQ==,iv:32ogjQOiWdWY7gqmZCvP3vL8u9qPfsN494k59WMS74g=,tag:+ZFmbnxWK0Pt68qKiJK1RA==,type:str]
+#ENC[AES256_GCM,data:8N7J7wE2Cp7Hk8L4Bm1gdXpTzpz1C2yDOX68OyEMcD4FsxOmFF51T/K9pF3fy8bP1AXO/daJ/8McVn6iXniATA==,iv:10wJzBgOGYlaTNt5XKISHi++6OPTR4Tyv1NIKtH2Vis=,tag:b327xsWipYNHK9UwpddXiw==,type:comment]
+#ENC[AES256_GCM,data:fJsYDtqOoCnYWMSyf7tdtHS8l+38TpTIqA7f15q0gIu8aIfh9qV+1gSR2POQhU82OgOkBrHFjBo=,iv:DwpjLaIR57x8ObnVcx9R+nVV8Yzf+ZXxl3Woyks5/+w=,tag:zm1z3GBzeBCFS4/vUq7Q2g==,type:comment]
+#ENC[AES256_GCM,data:I1WMEwtZvxCchkfiC2CZokHsv8mqc/Ko7g==,iv:6GNtyPxZURQMXDAQNQa0+lL1o1MnaCZEdvbEXAo9MZ8=,tag:Fszd7T2feAtQeduVqdBrpA==,type:comment]
+#ENC[AES256_GCM,data:PEMe29rx2JOSMtpnnxHEq4eEULXLhOliifK7kQDWKXJUzYni8pdV026amQtmABDmndDKBTccRG7JDGrBJ0VhA3awZ45BhW29PHwb+pI=,iv:gi0tukFnKuWy+5m5YMPBOMRFl0ClEd8lalof7CxK5Mo=,tag:eaI1PR1mKLr2uWBCEVqh6Q==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:jHcOiAjb9Vbm98XzXlUgyHXjHcaGG+6T8YzKYHKIBTlaeLvMGImUmeO1s3+haro+,iv:Pjt1IMkOza9wXSRbIN2PlEEE9CShv94EbxAdHSmEfGg=,tag:9DLL9+Ueir4ZR8qtzdmJBQ==,type:str]
+#ENC[AES256_GCM,data:1xExtJA+VP+7W3xPH80yh3hQhQUhKxb3tVABvZEvDk5xvZ7uJW4x11RqXuXZmOqU5l3A0Y5jDxd71ryLSVcaxre0UhMnjts=,iv:CAKmyt4glKecxrAWqbiFiFYra39tFHoMvGL3pZPidP0=,tag:9QHE8BKDr+xlRRovExEYlg==,type:comment]
+#ENC[AES256_GCM,data:YbIxrDVQb7bKOLb3tgEr9lO/4sLzAfD3YQBFXW6wE3AXHybou57dujHrPnLzl1TtvCsdMpqp,iv:bvvEPxCjBDXXfcbAie9EQ9Bj8g/ZVZEk1tSj2HX7V8M=,tag:Asqjom3z0tcAKYbU7vNiSQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:l/qEOipy5A==,iv:ur3GiSBjeCU3LzqSAFpurKc0ru++WBA9hOTsmpheAgo=,tag:8IrCDQ8ZO74YPKJx35+0yQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:sWAYGZ2gp+nMDyG0WrfjHWjsIIA=,iv:w6H0pr3VH+TZJl+KdXPRCMNzVpSB5YRTATMBJ/2Ec3Y=,tag:WGcMOg+9gx/lZnCky9wdrg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:rWXyZymtd4Nacfk=,iv:h9tPQ4KPPSOuU2JEeMpS8TWUgM58XaUpmJ1qX1M9LL4=,tag:4fW0wKK+GTu6bv1CJjkr8Q==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:OTZYsqdzfQLNAN31Bf76,iv:Ot41uuF5SAkCkA8Bhh9NLXCCAWvm23IWg3tJpDDGmM4=,tag:fqcYuHKKXFHBLnAbhHvhfA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:RxHbR2JG9P83BIN8Num0Sv3wUKDlTJsrfA==,iv:mhSpta6WOZpIbJkxHBSYd3gjI0PVgavSJErZhH7t3QA=,tag:Y5rmXTAGATVZtahsUMKzsw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:NzQDuN2QPwZkNXdmVNlC6AOv5xHc8NwK/sQHRhz2zA==,iv:Z4up1EMt+tuTFTAqxXHWfFpl/Cq20TRD970RrM2xdZg=,tag:ImAbK/z/LDTBgjfSJI8eAg==,type:str]
+#ENC[AES256_GCM,data:+BSjntb9zABhb6tIm6QJpO5pcx/VGlfIhQuzlolOL+7iGZvjYNk=,iv:vUQjPhyqfbeOOz1xB1GKPxb9N4/QxbNOBXpm2njXoPc=,tag:J2Z0FLMn7gGPkJQIRF1jcg==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:ORzplLKylxsN/+JAa4TmumYcMiI=,iv:Gnu0dpSHGUFgStLJmZx7youea21H/TZdhc//WYK6LnY=,tag:qE7OnIszooIeZSc3VJJQyw==,type:str]
+#ENC[AES256_GCM,data:AUoPdAnZ3+w3Fc/Dc00=,iv:sTC+07TaB3K1y6/g2Be/R+Ry3zmkmLIvUOjYuIfUElM=,tag:G7fx2yM9Qj1X2UiDlbXlYw==,type:comment]
+PODNET: ENC[AES256_GCM,data:2tIhetOCu9ol7uRu6Q==,iv:Wrzv8XK9XC4Y8jbtPGDuXZXp963PSeUqyl6jB7UD3zU=,tag:FFjBex2UPq0cu8V8vZPNmg==,type:str]
+SVCNET: ENC[AES256_GCM,data:aCJP1YnFC5wSS7FXkQ==,iv:LpNCKKhv/XZkozN2QYaNkpN5vKOT+Biz/q+IXjbRcjk=,tag:MA0k7try+ORwp98Ef1dKMQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzV1QwM2pEOFdXMzQwQjkv
-            cWQ2NDQ4dmYzVnRMaElxWG1YRVNQSlYzWDNZCkZ5dUZDZktjSy91dThIZThmSE9C
-            emlYWGk1cWZBd3pjN2NGa0EyWUZkM2MKLS0tIFVaTXFVcnZTeHZ6QlRwcTRsckpk
-            UHU1WDZER0pUdmxLSHVRUkdPZ3VNU1kKfdzgnogoD/C3iFVdCFaLqnC+9vGZZyeS
-            orrFwOVulB1Ajse47jb7pGmEmWDDDz7MtnrSLSRMjagxkNhrrzHEPQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlNlE5YkIveThOTHdnd01q
+            WlRYTW1yWjhFOU40ajBSTGtudWFXSU1qNFVJCmFEY3duNWFlS1YrNFlxWHEzRWpV
+            eFJNR1l1WXRZdnMwTEhtS3lrVzNjUzAKLS0tIFZVWWZreFVyRFJrY1hDTUFFMGE1
+            Nk1nMXE3TGdkQURyRDhXRTU4WTBhNzQKR0DzxAhAFTGM2KLLJ8pYeVzPfakS+vIE
+            XzVcy1w/cToj2DJuHTCuoOLCJzlNEb5cEeTF3hRRZuSjEVFxhjSISw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:44:41Z"
-    mac: ENC[AES256_GCM,data:AiDrIWC6PXPGphZy7ABKH5Oo4C4cZa9RZGkqO8UxgIiRhSxPHoHvhDKX+M711k9m10kEeAu0x2aXJWa/0dfhmDrFCYMat4+l/emA4mzOzWU0eLRb5Hu6uZYoTGkujzJMPZAr90759HETAhkk/cB1l3AwyKDkYQ51qUCesaP+7S4=,iv:w1iliftA8bySb+OxVPnZKLxHNLuEkn1tNwB3iHE/r/A=,tag:X/m6ewFRyl85eZM0WqkN5A==,type:str]
+    lastmodified: "2025-01-19T19:55:22Z"
+    mac: ENC[AES256_GCM,data:LPrKDMuMdFYejeMLbYR+jzZFQuW4qhQPGKhKZzUg5D/DkfKy8N01/FovPTUS9UDUX5/gEIQJ7VoHFtGzQj9UeOlkYK4leQnWF8zWIHrrp4ikDGaVBt2A+x+v4vjgnLP18RFJO5g6rNjdDInd6p7l1YRZd4t+oMzhXn7kb/Stm+g=,iv:CFk0Q8cQ9AwbGU4WX5dk7iXbJovuvjwrl58zgR67U9k=,tag:ZclPveJE4HX1zGvOs/DNdA==,type:str]
     pgp: []
     version: 3.9.2
