--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:785rq8Gfx/nNOYL/qrzws5KFtumApBwCLkrVIeRUf0TQKhyfn0U/XvOeTZkB7EuXKG+kFQ6a7ieZw25KkLpF9cs=,iv:JJpAHYA/55m16+XYIzYibJWWDFiyzvH7SvW6BLgaYmc=,tag:aFx9UQzkeuSjNZwU6FI+lw==,type:comment]
-    #ENC[AES256_GCM,data:hTtj5tb4b+SEqUHMePPqa+PltlgQWek07Gy8DHAszEb+UNHZsYY9ZXGdSrU=,iv:9HkN7GzOa7vJWvmrKDs0kkIQprpnQTvUgDdxMcYe7Tk=,tag:52gBkpqz/XmkHxWml8MYaA==,type:comment]
-    VIP: ENC[AES256_GCM,data:Ng03XsFPY24g09Z65Q==,iv:TCiDvk/YfkLztqB3lgC9ca5Wwoi+QHzB5y0ha3f7Lr4=,tag:TEiRqDB4PzvjWLr+tvG4Aw==,type:str]
-    #ENC[AES256_GCM,data:WgNjrLl3Ga8/W8QIMqWINAZQcVD5xVNl+FYE,iv:6aDxNEPw/KZ50jVhEoD8orUvYevUOeTX0PYXP9gSBKc=,tag:RE+dsnpAG8z7XtB7frGNBA==,type:comment]
-    #ENC[AES256_GCM,data:iykLPt7BsCZrpD0gfs87PDvIZpDkgjXsMeFIbdzjocKDEg8EEZCWodkNbFXjwYyX2gyOmPISu2+vQXqdcd5JRfjuiojXZcCkXTuc769G0xUyzisLDUexwRw=,iv:Y5B6CWuqxp0UvkWfpX/w0BhIWvQ2zAqz200QCmT8JG4=,tag:Geq1er48qSegcDcP83hKHg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:/ZyZC7IsxvrD2k+mwGI=,iv:2LGh8rdOBQp/3TJ479GzvFWieP2mKP8A7+ssEfy5phI=,tag:8Zsg+3LiCYzx1LbxkaRrww==,type:str]
-    #ENC[AES256_GCM,data:9CmuennAPrih4jf1vvaXg8N98JpoQvYHiOUIy4KdAZUVbg==,iv:5OVa1LfLkDxiIBBXnfZMrVVrzsTHSfVxThFG9lFJr1Q=,tag:qa3RLy84DdtGOJvQxhHVnQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:WeI/Sp7mvCVpyKQ7ag==,iv:ZaVnCje6UIfpBRkn68I7OXXpbZaxxSy83KspUw3NfaM=,tag:b5YR4DYJwmwzrwsGko/j+Q==,type:str]
-    #ENC[AES256_GCM,data:Twikr0S09EtBPIpg7ivaTHqROCHSC0v9bka+5qKWpvZk14hKt7b/LiefkGXA8J0=,iv:72TP1eF4S9879WLHGcnnGdv3iPLaaMBjkTNDvPgjVLM=,tag:Q5ZOejr/SZqZDO8HDvR8Gw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:8zF3IY2RM+eHSJD0XulvPo187NRSFaXesZvyFENh1w==,iv:wmBd+ZASnsy81Dq+ngz69alycga9lTBr1eHGfS3wp/M=,tag:GvOPkKLbEAxvEzyVtBtaQQ==,type:str]
-    #ENC[AES256_GCM,data:gNY0OUjblk+LEjx4KMmaa77md/50ITA+T9b/N21gWxkDZa2Iq4kdcP8S+Sapk7OA9bfHWAvMKPOrmMgkx1liQgachgWxVHF2QKA/guQYoHVDSw==,iv:nBg4I6EdyvKU61rjvlm74FLmev2TLEY7Iwpcx99wspE=,tag:t7qJb3V1vW8vUpERBs4SRQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:3O7LU3hTHjwYz7fb3i4d,iv:qwvuhs3DMMlS+7NPKtLBNBMntOXVPhWUJLe/Se5en10=,tag:5/N0gUmzCKIPHXN7nFhp/g==,type:str]
-    #ENC[AES256_GCM,data:DiTS7N4eSgxUW4sunJhK19zHhQs0ZlWooNjrqajWaU6Z,iv:i6i1VIyzpJwU0zFEo/y1hk63D+CGOeOtsAUtHSGCkCE=,tag:qEjb6Z3IR4qiI6TbjqPiYg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:pAyVAqg2BmTve1LXCes8,iv:VucEWaJqdMBmOr89AOVdfHj+8M7wPsJ94jvsJQ5dAQg=,tag:dSybecSrVVdNR/FwwpDNeg==,type:str]
-    #ENC[AES256_GCM,data:qrtFlvB/wBrprcEg//tQK2RX4prhrpGyt81sEdL/jrymN7IpNKfrvNiI83+mUSeBbbHUyJc2b20UKlScQEitb4kzJEW2niNx8lzwW5gT3r0=,iv:YaI1vuVv8t7HffwzkouONHiVONxg1h3ZBTJsTqARLKQ=,tag:kYRMvGWpKqrB8KZvc6kZcw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:eyTQm3rSxa1g1Gh0zkMz,iv:gqjnyRlYMnYz6MKKQRveGWysXR5AKEecm+Bm4rPv5S0=,tag:5hTHyXcw4JkUe2TqyuD7FA==,type:str]
-    #ENC[AES256_GCM,data:oaNAl0bgYdkwUrqFDz+MT2avSSJjVIe1AkaegbRkm+xu/xg2mU34vpcAkKz88NBljNW6wOkallDsNEkbqB/stdDSS5AfU78Ni5XbdSJ0RCTgpzcBeXEd,iv:F1ysVtcrjxrnPitmqX3y6m+ChqfxAImvLph41wBzsXg=,tag:vapCLSW32PuKTmqTdVJWVQ==,type:comment]
-    #ENC[AES256_GCM,data:GTxi+3aE/x1Vw37eSAUQVHd8mLAtZFlj1rBahve07v/DScr6fOQG4gaDJPIDmc7hDTWReSUwkjYzynTfQhdgXgs3mPxSJP4u3LDZSeuWjh5c1UGMQZgHY4fzQxo8PxOFQPWNPI+VYBznr3MRhI9tzeuzFEmp2M3mSqzsIg==,iv:ZQONW9/IO2XCJYBhkONW9y58fmUYRqrsssfO5+Ha0yo=,tag:1keaykvtkOP3F2P+uZxfxg==,type:comment]
-    #ENC[AES256_GCM,data:06vkvCodSYr4S4rkAIuyKT2qgbvoQwx7enOyonoHc59VnTe1PPaOimZRkfkeMlj1EDfKvHox2eV7zSSi71t5CU3Y0o7nlBa5g5ITwdHOeoM=,iv:+t+6USYDYxls6NrZ02UT7npBh5zEmnqg/qpT57g+zZQ=,tag:QV3Udc8poqnGafDymwFW+w==,type:comment]
-    #ENC[AES256_GCM,data:ZmcJV16jgo1a0XWAjieSmakYEIbIdgojQFKn4RB+1JfXzWIvG7zXhEp5oB/S42iVzBmrQgy9,iv:+JbvzOv2JUry23HUUU2oLhQiFVkrLa6fIloUHW07gmA=,tag:RZUqsy+Xj6XT4cwe1LWHqg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:0CU6YujXUG/ZKXeB,iv:/WughjBT56LwLpWZuq9tTAeFNMV6S5zfX+KKPjbkk5I=,tag:IRNOHcxhAn45Kaln8+tT6Q==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pLWBqeQ91z+LnwrScDYegyo=,iv:6mjQKUryJPBIzNyVL9ZQBcsN/n92cpWGjzlE27VwlZA=,tag:han6xYbRoCcstaJ4Lv1fQA==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:pZe6QPy7u+41vI9e2NWa0QDRfB+uU9Fs5UVG1qZ9JSs=,iv:JHbYggEUlc4aPJtbMNe6p8U+m0lDznbui0eNSaflnk0=,tag:QMrI40/9yqzLB5xE3VJwCw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qeqm3Fz78ZtUio8Kv5x/qxsG/MfPe45hx99WZIxSnqgsKpmWbLfkcw==,iv:l2nh5zFRnk5SpdZrP14H3ETX1pYRztOxAmxYMarjcl8=,tag:lYRunAoEtlfWI0gNip7DGg==,type:str]
-    #ENC[AES256_GCM,data:mNoBVpwiw/YUTx5xrWjR44rTNXBZwjxd3F+yhK7xpP2+qlheXW5ppngv7A8lG3H0k2JcAHB/wXmT08NRbNSiVA==,iv:0FURVMWKA9BEgCWpa1+htDh1jtQnZ/BR6nh2ygowSSk=,tag:P1WfNXYFThNjMh4d/yf7OA==,type:comment]
-    #ENC[AES256_GCM,data:dOvLIS1FNq4wZ7/ZCzHupJZPEQ5DHYdzKm2CzdEFv/qgDi5CyfhWP2MplmWlg/FU591/NWY6hww=,iv:zheERszy5HW5DP5Fbm5z1Hbcw1O3oEqq9DFA6iInpAA=,tag:3AnMDiEaDLEQe+8VIy78AQ==,type:comment]
-    #ENC[AES256_GCM,data:HoduPuCoKq/010F1E3+9teKWAimc7bclgA==,iv:Mq5+f2jet+BS8L9va52kfyg9H5oHme3VWYgJ11XUW3o=,tag:mAMn36EMuIffLi4U9pUGRg==,type:comment]
-    #ENC[AES256_GCM,data:rFMqOV6s/ZgI3Je/tG4EhKnWq0bwQRkGOuOgc/WkVouuoiYkyjhH3Ma8saPOljGQ36/5GD/3YD1zzZn4eTTCVvnpndBeUX1dy2HVA44=,iv:CwPkPlUqo0OOpUqKtTXH1ixPpEd4dfIy02VKwhI9n9c=,tag:wl8J/8IJy3rQIZem0qt0jQ==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:4iuLQGoPIC6Avw6yIUfy2+3IUzH1Q5IFTW3iKQUaRgEAd1PyfNHZPVTReFkpmwVF,iv:G9wqUQpuqvh5PR8IoQrrHTJ2tRg3w9T1Hwkv1tJ4mJw=,tag:bOALF7UANNIVu4IxtR2B+A==,type:str]
-    #ENC[AES256_GCM,data:ZsSMIr5dVjCx1OGmjOx2Cd1kKvZIzy2LhwjzFlhcV4mJGvcdpQ4z1k/VEY3Aus52a7mGN7wyBBBfsEeK+oVX1ihFRaQ0efM=,iv:E90+RMdy3KuhXLOW5GezgR4kc4T0S/nOOQLmxDQYddI=,tag:M3LZ+pjVTmsZqnRXewZ/nw==,type:comment]
-    #ENC[AES256_GCM,data:ck4uji3cwDG+aVylcgoZSxhc4KeS1QG1a6ADWE57rKUVe8Zugo8Q3sSdjcmvjAbsDTKxWwrh,iv:0B4zVmO8i/IjfP+GjBSoVkLWz7CIjiHzLlTOp2HFml8=,tag:WF/3N+mmjxU4xxsswOTs4w==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:PCxpSB4kbw==,iv:MLLn9EQ3/8pQKIeVht0oSjlkBz/i/zvAfC/A04NZOg0=,tag:1RTAXYk5uzfBXukNTgm8qA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:/Jc2Ds5hcy6OodCcEOkEYkVNfrs=,iv:3vEHbv2qnsxINj3MqxkLhoz52G/kMknp0V/c22B//gM=,tag:qKQC6UOpGg8npsMaiuhnbw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:l39JAVPSTu8HtIc=,iv:ihAcfC6V/QIYP9DP4Lg31YDIpsibTUMkU1RS+y9S8a0=,tag:XntEpWEigLiK6ZjMUoAK4g==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:9B6fypIL54arqKHN4J5n,iv:FHOboT5Jatm1/LiDv8jq9WviOuvfUUPATrDKzHahGZY=,tag:bqd+YdoLO59yTkxODbxZCg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:kVxUdcCHyVLZ5/KBrZcAGzUk4uivdozbVg==,iv:VIAQn/+wNgmRNJBmUHwJjqdedTkZGbgzygVPnBhPD1c=,tag:EW58V38SFSOD5xltYtrBng==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:P/M7NYWEcTc4c2QyAVtkWYj6JDZpd5Zlu25pZWIp4g==,iv:ATyVcKdpP3FzAryvtIJUSdqEzHjDn0PxReAZ+TR/UnM=,tag:sjycDqlPADGmOu3rcBTYhA==,type:str]
-    #ENC[AES256_GCM,data:U3YVt+47G6E+Nuhzz5b3N1JDePjJKZn9QG0uBd/OVHdFSXwylGE=,iv:IVz/RRuEnjjZlI0yZMEHvAXI9d0Cd0jzhTRZb4w1X8I=,tag:DCsovDzNVLQGZHNwGAFsnQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:KW9/0Gu3/pheZk8FN0GX+X9sQMs=,iv:o1ZpUkz7kSOw+65VZCabt3TpLJJBhVhv4w7/lMHNnS8=,tag:ZUKH2BPatVO20rGGersWjQ==,type:str]
-    #ENC[AES256_GCM,data:gj3I69YSQ+tFBAaxZVU=,iv:eTJytenopFipEZbJduaQLSs2KBPNQIJSlSOHRD5iR9o=,tag:AB3tM7kLz15rGoFxP+snpw==,type:comment]
-    PODNET: ENC[AES256_GCM,data:b6cbuBbvh3NpiqZqhQ==,iv:cPsP8yb4tdcvRmfgMOFsEUfgi+Cv1XRdnLWoCwUogrM=,tag:EQsuoQvvfQ4ZSnhS+71ltA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:GJyUswS+IYmSkFqReA==,iv:UCx5RSm0/qtAUyeDEdFpbDG6EJqYCjIzUIGHXkXkcCk=,tag:xShTrEMuJ15V2IiI2vjKxA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:Z0Z45w==,iv:+cd32RPGlEpZVxOHfLj2CKD/HfiSx60dpSPEJoXVyho=,tag:EsbwazCd+guCAMnPdd+Bgg==,type:str]
+    #ENC[AES256_GCM,data:G2n+AdKTxGErBbLeqHArnJZYvRfAMcsTofLPvCVlZAQ4zLBS7E82jdmcmYtcIlrpSngGSMVAWS5Ia9YleAHOQmE=,iv:IbbY6XsflIBLi4J+OQAgal/v2Y663i62NkXYdk9O4Gg=,tag:Wo+4bYV/TAp0nOeBikFArw==,type:comment]
+    #ENC[AES256_GCM,data:MZqvNeer3y/UJGz++mqJD3OD09cotEsgx9VhO8RSFQa5JKLVhKGiU6+8Zp0=,iv:w/NBAEtdm2f0IPZsBnOSKpAMxvgWMAjP/F6gfxnyza4=,tag:9hNyO4vw5HXWkwNqaKZAjQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:itdkDZylYlFIdw42FQ==,iv:blt+jA+qCRmSulqmVCJC/9C2qpobaskqUj8pn8QAtk0=,tag:qrohXtssTlKbbECPXeDNnA==,type:str]
+    #ENC[AES256_GCM,data:hHgdVWjgdWwRILBjoxQcSnjYavFppiNkRY9X,iv:P86d7eL9IAtSX0/A3UTCKP8je3mOKX3XBWklgv1lyBE=,tag:dQz5lRVxlGdBrqlFyp27Pg==,type:comment]
+    #ENC[AES256_GCM,data:HOh6DOba+qAs8GI+NfemW8G3kFqW3qGnduUXWHgW7vpfTr+hVmnVII/DlMLNDZsIQaOBCPid2GUQTSyjnTAVoC0e21BoUaymveyqupBuTtHsB3Ls+siOMMI=,iv:3o4mrAyRaOhQPDjRMXCa7aoGV6NdpmlATVPZq/QylI8=,tag:VqFW2qLDgSNABaAiRo34Lg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:IZDEh8IrpznzFGkULfw=,iv:ObjP3BS3A8mq4/4BKUCiIV5ym9viDelVV1ll2k7iexY=,tag:lXNvfjThNMxrd0+dfZ8Afg==,type:str]
+    #ENC[AES256_GCM,data:CtCm8NV6xG5WQIcUZcMFy8Gf0ErjnVZCHKWTVnkEeGhRfA==,iv:+2bcFUTo6j+9Wj0M7wq9+t1zAvBZJ0iXCwmk7Fq9SbA=,tag:ig6kfMWnacGjWAYDGlw5sw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:Cohcd11n5jxY8tj0Hw==,iv:G3eqL3RBDamc7FD9Xn5FLOMl3A7kH8//uHTQGAnsHas=,tag:RaSc6Z1OFkffjqZ+cVCt7Q==,type:str]
+    #ENC[AES256_GCM,data:sB8MADL88WgzklbwcLsBNRElhZRTYQ3Tqq9xl0SShcNnWNI+U64pZmhMABaGpPw=,iv:FIrldJjpBFWWKKEWtk3KarV3LSoRLd0YcnO9exVNBTo=,tag:aF7lkT6m8qQgmJClzGUcXw==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:0Gw6fXExn6dBEWzDINzBIvdisbsiSyXDhPaqKUbN3w==,iv:6PCWCpgEDOexHSSkwcbDnnewBq76e0dg9qnYAw9tHag=,tag:ubjVl5SbGja+ZYkSW0qXPg==,type:str]
+    #ENC[AES256_GCM,data:/JtczWKq8gXArrm7b7AFUlOC0o+Yk00yMne6P7ITTFTDgkOcjdQNbGyDcF992VqVaP+5+rn1Zzo5k4o0ct/1G6X1dzNv2QeD1WrLZxWL2vSjPw==,iv:3cT9LhwZbvO9mQmwHYlj8e/LOOWSULyTTBgziSPszV8=,tag:2EZ9DkReMKFTkYroM4K4fw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:LMGVWLNs7WZEoDFihgHP,iv:ZWMRKNstwsGdAsWiRiJGrO9VYo1z3eXB9Thc/r82G50=,tag:mcExt+hb+6gSMhiK2BSVtw==,type:str]
+    #ENC[AES256_GCM,data:YbcvqfGbd6/d+yvQGalzrg2/7tPSfvBBmsqM9Iub1px8,iv:MIyhF6itWfb2sYyioVgdob/3vPIKiRm9UW5u+vaV8uw=,tag:6TdGHJ0chXltKk74hqeHkA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:eBA6Eh1ZgoBbPs5oPWPC,iv:o2FcV5Lqa+1mYmLRboBTFb91/xD1DpGfYNjkHAbsHdA=,tag:lRdM6ajmBkwMQsIEfD54VA==,type:str]
+    #ENC[AES256_GCM,data:qqmiP/Tbk3ix/ueoiWgiePTAGzktvS2pQIyPXkeGj18rwOqIlqztPy/9FmGCP+aHUJJq5tnOMWi2j7fWeA/aopdey/ILaY8QW3rwCAFcZ0Q=,iv:C7mPkVp7i7VD0KCTRMzJEutWtVhXzynqs+hFWr9rPX4=,tag:PSZCY3f9zaq8MFQnt6Jtzg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:R1qetsBNgiJB+T2TraDE,iv:zQXNnrpsGLxZfpvtK+xNAqVGH2T7M8a0IWO4wqmJTdM=,tag:RifI1Jxqnxtn4LBjyZTrdQ==,type:str]
+    #ENC[AES256_GCM,data:6qvKKRz5Ya0Yf8DK6VzSzPIa3NEhPktYf3OJGAn16UmIUlS146sEgr+CybAZhnf0yFZcEi97De/K2/KOz74DTVafY2qdv6VBAVdoLarX6qhB6dFCrqoM,iv:FEPgJTmEOxva+EE8TKra9rwV1aLx1NOGAj758ueDA5Y=,tag:YN1x97ozASSm61OFHm5D7A==,type:comment]
+    #ENC[AES256_GCM,data:LmNrU1je7iykhbATJO1ljCkLDv8H762SwlMZn2jmlGx6v9WNCaSAjAp74vKTNPyfUkBXNEv6xh0avpOg849CAkHkji74dQoHOnPNHKrPZgDxejUEOIdTbLCaiAAnzVksIkFMBi21gUvHIzoO97FzfTNNL9zbSZQJoqKajA==,iv:MpQEOT4oX+3Iej0/64u9vGGgId1y3ePQxUPYv+Z7nbQ=,tag:jgDrjcCRauAHbF7F+CA60Q==,type:comment]
+    #ENC[AES256_GCM,data:f3m4N/UnOO4hOxpxKllfh8J3YR5MnD7pPZeL9L2yBf612xyCP+V6YYApr+BPf7V2wJHwl4wp4BxM8gqoxMGCPUCzsSPMkjyNZkZr7cSfm90=,iv:+rJGrMU3mr5H02EpJ5z3Qh4UXhJKGztgDMgT7rr09VA=,tag:jwYm7Xz6ZAh0XXgKm9dO2Q==,type:comment]
+    #ENC[AES256_GCM,data:cUSfEK8zvOJFylTKjvZQeQ6quUibUWFzVDoI5GEJ9C4JODEnV48kGnnjeW58mz5+Iw6mgap3,iv:QVHr9B5af1B3qXQ+tERCgz3rD2jECvL/Fq5EzbXES0E=,tag:xLrH/VlBmHIpSmWbG3VJAA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:UWx4L08UjANvcrT3,iv:5sDrK8g0iaFbsAU2E31EsFCO2iBNzV1gS4DVp7k+CrY=,tag:/O4jX4rlG7jNot6F0nyXaA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:WLLR3WWtc09+rdnFU0A9cho=,iv:WIt1HCM2apzB14wKeLOF4D0Zqa8CZJfsL7LWrft7YaE=,tag:vIlt1Ub/uzIkUdJ/7lYSKQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:JBBueP740fQhmPGMFWCAPGEkd1MGP8u8tI+o0XwrRRI=,iv:TGoVsXg+ablAD+/QSmm7V4kCdYs3B2FByIVCvmJDYe4=,tag:WqTQ2NkCd6gbf7+ynUxRiw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:TqXf4ICbeENf/U89HkqcoRmvg0m9lKMgv+0ziRbpi3WCpjVC1/OLdQ==,iv:2F47xH2LNp9MzzPo6RB378OF451wR/Kr3QktotHiM7I=,tag:Qqr5gh916lmqIShTz+NODQ==,type:str]
+    #ENC[AES256_GCM,data:d19CYjuRLXKIyeD5T2qdatmnKlHs2BRMVWBS1YfvNsvUVDCl1gLKW+bLhujO4JfHxHLmKKcS5xYywcpToK8LvQ==,iv:Pkv5ct5BpJSE89Z2J2fy+Lkivdt0vsfHd1EJuTSzVdc=,tag:SkNZ+g0UwjjZAWQMAeGG0A==,type:comment]
+    #ENC[AES256_GCM,data:0ugLVloVMly13EamaRlCLjjeor9lSdYAvOFiSAAbX06BhEjkD5zze2TVjdYHivWlZLoDtSjbfNE=,iv:0ZYYwNSXc7E1XPO6pIFqXAklwH6MzU3lA9X3CTsRAOw=,tag:u4myWdQZlX8eIvXp8W//4A==,type:comment]
+    #ENC[AES256_GCM,data:jyDBrIl83jw/cieS0ovVopSJYFcA3KtoRg==,iv:pxYIhZqnquGXruZjal7RR3RlmDgBFtEPOvIURReF+Us=,tag:cqOkkyNg4ZFNdE41WDK8Rg==,type:comment]
+    #ENC[AES256_GCM,data:LwKrySPtCpK0L44rPEANeuVOTcHZB9OQQZo0MBYVwiOOH9AjqsXT4/X2izEs/MEYwbU+Wxx8vUC14f8/w5yqkNK7oHbZ8DrJHVgcIYg=,iv:hzVkAcLjUp7C4/9QveTXwO9LpLLBbSkB1kt/4ioqzgE=,tag:3zpF5Dabr/K7/kPe6552oA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:8Y2Ri7BELFRkvoJ/YOsmArfX6DjvJstL9NZz+Mmq5t3HVrPq6gNYZCrbNwDi1u7m,iv:JaTZ+U/cuqidG/VjKby5ae04hK3JQAP4qHdcyuTW8Ok=,tag:f9gkdDBN/8Y+10zbxtSCRQ==,type:str]
+    #ENC[AES256_GCM,data:Gp0A+CknwLalIprAWyndPLsDdwAPdG4YPkeUFGERDXx2fGmD2GLY+/Ou3sjaF0fBCYZfEQnU7EA1Q5FUawfZncLj4d8lDcM=,iv:iqQ7dFVPqJbiiDlylTvTOcZCgCAjI/1W8TlSPWRmbv4=,tag:rI9EKp0bIyua02GxZ/9Maw==,type:comment]
+    #ENC[AES256_GCM,data:2OHWL1kN81cmxe3vB8wlnyu9y0/4Ty7A9TzK8z/8vil3atLaFZeJwaHzursZalkRRXST8Rbn,iv:BZSH6X700aNqlnmfhI+Zd9yp2WDtV/S5lbRE0+q20zI=,tag:dWy5JcZSvS6+TXXg0quNuA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:1ygMB1Tgpw==,iv:2IR+/tyDDnyOhmlTtQ2IFoFbrtP5koskPQfvogQyFa0=,tag:sXP1M+RArJ+V+kODx+5a4g==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:vG9uOPi/CDSKjfBNCyTcV7lAkkU=,iv:oJIvqhXvmRyuch8LAsWpnYkQDbChl9gtuaxuUh/Ik0U=,tag:BnjAkAh+XhE9r10TmyXbCg==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:0OCM7uaOFrnRgks=,iv:ft/FPgcTqY+EAihmprNgHRTb7LtEISy8Vem5h/1h2GU=,tag:lOyVB9Aa91B5mMH+CpXyFQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:T5jNyECDWyqTWX9+vF2o,iv:7KzW1yMIl25uivoEC6wIcUMIVwkePaefRIfa9kHAA6k=,tag:HkNY5ufF2DgPjJEl79c/vg==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:S4jgxpQC5QtijBox06sVVlJ9aTLXkFCZMA==,iv:f95r4DIPYmbCpEO1QlwQWjpmOQvrKxfLYHW/WVwHApg=,tag:dKdKzX4DuyLkcwmjB8er2A==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:P86UwHtuyOJ9Dhe82oWFJ75STixb1SkESSK+vpERMA==,iv:m1wy1TtEN96cYL7QOx6Rjki1+c6hV07uv5RNEodD0yg=,tag:GNMcwZcuGiSSxoWhyaFvGg==,type:str]
+    #ENC[AES256_GCM,data:12PqJ8PT07xL7ELj9varWNB8v3ufBSRwADxW+CLAGfyyfnYCcSc=,iv:1lgmSYPuB/OOFJsWLR2/9U0+ko1KmyEvK+9K2SUyPDA=,tag:ykHBFAf6M1jpOOcp4HUAag==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:4Kh5+pa+fIMbjHH7YjtDMWgmTC8=,iv:kPdOKfpNBt25eUQRRmFGtUlZx53544rWEFdakQQrGoo=,tag:N62hRgwpQYXmDRwpPizqKw==,type:str]
+    #ENC[AES256_GCM,data:0r/Cy9sYf3C45P0Bo8M=,iv:l0SjhvI5at1bAPDGBJoIF6oiwwMAISwhPou4dYhXNuU=,tag:m4Tv2ziDhQldV7wzCwzpZw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:uNlZEA4iXhovWCYy1Q==,iv:MzimOk9Ez63M2ST9KmOo7R2HGzwZcAGyQu9uX2pneeY=,tag:DUwMn9v9Q3TXrEQgAVRyjw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:UHA/izpq+qIHlchfkA==,iv:47q1hM77FrVbNzHJt/rne5zvGeb5funG0JPoRFPOSuI=,tag:VAEUh7YRqDd8w+Xi9NRw7w==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:TCFM+A==,iv:bzfxtudGo13DVxHakCIgZmNpBj7BlBkkMamQKJvIn78=,tag:f0T18qt5LW+ow6h0C7ruzQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBb2l3bUJGbVpXR1V5L0ti
-            alp4YzVkMGxmV2IvNE1QWCszdnBqb0J6Rm5jCnNMK1BZK1ZEZVU3ZEhsRzdKTGlB
-            SzZUblBORHVuWUh3T2lyWVBud0RxckkKLS0tIGZvbWI3VVZXbHpjRFdlczc4TnhJ
-            ang5TGZuOGNwN3Z2eGIwazd0N1g1WmMKeXjEZlWkb3+5ELP15ieLROCmXTq+unfl
-            RpRk4F3GkyHP1ECLYvW6rXuQ4OSSiSVQ0FRGFCbMyQSUUEja1/k2xw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBBWmk2OEJaeW5Odm9MaHZh
+            Q2RXc1hZNXJBU1RoOU5BYWNqSlhqU3hzdlJ3CjZNQTJ2YWcwazRDY0Q1UVhSTDFY
+            WkEwWEIvYm13YkJiaUFjSmZhUFhwZ0EKLS0tIDErNzlVQ2d6OEdMM1Znd09ZYko1
+            dFl0b1F6c3V1ckg4S3JoZlBuS0VUQTQKCU8dLcTWA9D7CHeiKCwL4oXaWSDSOpf9
+            iWsNj0Yd6nmWyI7X1t4UUZzjrVKLFtHgwiRwQ6Qv6OOwIPBU3PpshQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T19:44:40Z"
-    mac: ENC[AES256_GCM,data:Rl39KEQbl8zl9Ghg8dKEjA1tE0a4ngqt6RaSMRpnNUSdgbOnszULPFQVgJkRHZ/GPwNVo+e/HRPyzIpCxkQnthen9MR0BEEGYoGqhk4L+dcv0m8GRVdgZ+LNpDMOFdVAgr7NVZM9BjTUM8oiNUl6BSDZ9rAWdR5w5W0AFnqHDQs=,iv:OuNRKzW5NlOfNycMpYrUJYyboe4wQUUvD/zS9sDSQ8E=,tag:D+vgscGfa+3K5sTCqv2pLw==,type:str]
+    lastmodified: "2025-01-19T19:55:22Z"
+    mac: ENC[AES256_GCM,data:b+clKhEYCABMZTl5r5L0OXS3Lhh9Ip5DMMvYPBUZ24pj7eEedoS2z+najNTzeghDGDqRTA3/hmgODfb8H9rVcdwMecTBAxIVDfbsBqGl0PmU4rY48fCpGnGgyxXfVdaCM49uXpI1Hie6x4HiV3hWuz09Co8DDj6QsMqBFxNmoSo=,iv:NKd6ueL35TxfXvTSK24zoAfK1W7ADOT8C3zEo5Kb3Uo=,tag:PKmDTnrksDtd5V06teEyqQ==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
