--- a/clusters/main/kubernetes/system/intel-device-plugins-gpu/app/helm-release.yaml
+++ b/clusters/main/kubernetes/system/intel-device-plugins-gpu/app/helm-release.yaml
@@ -1,14 +1,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-    name: intel-gpu-plugin
-    namespace: intel-gpu-plugin
+    name: intel-device-plugins-gpu
+    namespace: intel-device-plugins-gpu
 spec:
     interval: 5m
     chart:
         spec:
 
-            chart: intel-gpu-plugin
+            chart: intel-device-plugins-gpu
             version: 0.31.1
             sourceRef:
                 kind: HelmRepository
