--- a/clusters/main/kubernetes/system/intel-device-plugins-gpu/ks.yaml
+++ b/clusters/main/kubernetes/system/intel-device-plugins-gpu/ks.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: intel-gpu-plugin
+  name: intel-device-plugins-gpu
   namespace: flux-system
 spec:
   interval: 10m
-  path: clusters/main/kubernetes/system/intel-gpu-plugin/app
+  path: clusters/main/kubernetes/system/intel-device-plugins-gpu/app
   prune: true
   sourceRef:
     kind: GitRepository
